// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav testcases should render one level of navigation links 1`] = `
<SideNav
  aria-label="Side navigation"
  defaultExpanded={false}
  i18n={
    Object {
      "closeText": "Close",
      "openText": "Open",
    }
  }
  links={
    Array [
      Object {
        "icon": <ForwardRef(AppSwitcher24)
          className="bx--header__menu-item bx--header__menu-title"
          description="Icon"
          fill="white"
        />,
        "isEnabled": true,
        "linkContent": "Boards",
        "metaData": Object {
          "element": "a",
          "label": "Boards",
          "onClick": [MockFunction],
          "tabIndex": 0,
        },
      },
    ]
  }
>
  <SideNav__StyledSideNav
    aria-label="Side navigation"
    defaultExpanded={false}
    translateById={[Function]}
  >
    <StyledComponent
      aria-label="Side navigation"
      defaultExpanded={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "__docgenInfo": Object {
            "description": "",
            "displayName": "SideNav",
            "methods": Array [
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleExpand",
                "params": Array [],
                "returns": null,
              },
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleFocus",
                "params": Array [],
                "returns": null,
              },
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleBlur",
                "params": Array [],
                "returns": null,
              },
            ],
            "props": Object {
              "aria-label": Object {
                "description": "Required props for accessibility label on the underlying menu",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "aria-labelledby": Object {
                "description": "",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "className": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "null",
                },
                "description": "Optionally provide a custom class to apply to the underlying <li> node",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "defaultExpanded": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "false",
                },
                "description": "Specify whether the side navigation is expanded or collapsed",
                "required": false,
                "type": Object {
                  "name": "bool",
                },
              },
              "translateById": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "function translateById(id) {
  return translations[id];
}",
                },
                "description": "Provide a custom function for translating all message ids within this
component. This function will take in two arguments: the mesasge Id and the
state of the component. From this, you should return a string representing
the label you want displayed or read by screen readers.",
                "required": false,
                "type": Object {
                  "name": "func",
                },
              },
            },
          },
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "SideNav__StyledSideNav-yn3bk8-0",
            "isStatic": false,
            "lastClassName": "jQkcEV",
            "rules": Array [
              "&&&{background-color:",
              "#152935",
              ";border-top:1px solid #3c4646;height:calc(100% - 3rem);.bx--side-nav__menu[role='menu'] .bx--side-nav__link[role='menuitem']{height:2rem;min-height:2rem;padding-left:3.5rem;}.bx--side-nav__link{position:relative;display:flex;align-items:center;text-decoration:none;min-height:3rem;padding-right:1rem;font-weight:400;}button{appearance:none;width:100%;background:",
              "#152935",
              ";}button.bx--side-nav__link{border:none;}.bx--side-nav__link > .bx--side-nav__link-text{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;color:#f3f3f3;font-size:0.875rem;letter-spacing:0.1px;line-height:1.25rem;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}.bx--side-nav__link:focus{outline:4px solid #0062ff;outline-offset:-4px;}}",
            ],
          },
          "displayName": "SideNav__StyledSideNav",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "SideNav__StyledSideNav-yn3bk8-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
      translateById={[Function]}
    >
      <SideNav
        aria-label="Side navigation"
        className="SideNav__StyledSideNav-yn3bk8-0 jQkcEV"
        defaultExpanded={false}
        translateById={[Function]}
      >
        <nav
          aria-label="Side navigation"
          className="bx--side-nav__navigation bx--side-nav SideNav__StyledSideNav-yn3bk8-0 jQkcEV"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <SideNavItems>
            <ul
              className="bx--side-nav__items"
            >
              <SideNav__StyledSideNavLink
                aria-label="Boards"
                className="disabled"
                element="a"
                icon={
                  <ForwardRef(AppSwitcher24)
                    className="bx--header__menu-item bx--header__menu-title"
                    description="Icon"
                    fill="white"
                  />
                }
                key="menu-link-Boards-global"
                label="Boards"
                onClick={[MockFunction]}
                tabIndex={0}
              >
                <StyledComponent
                  aria-label="Boards"
                  className="disabled"
                  element="a"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                        "isStatic": false,
                        "lastClassName": "hllekx",
                        "rules": Array [
                          "&&&{position:relative;display:flex;align-items:center;text-decoration:none;min-height:3rem;padding-right:1rem;font-weight:400;:focus{outline:4px solid #0062ff;outline-offset:-4px;}:hover{background-color:",
                          "#2d3f48",
                          ";}> .bx--side-nav__link-text{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;color:#f3f3f3;font-size:0.875rem;letter-spacing:0.1px;line-height:1.25rem;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}> .bx--side-nav__icon{margin-right:0.5rem;}}",
                        ],
                      },
                      "displayName": "SideNav__StyledSideNavLink",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                      Symbol(Symbol.hasInstance): [Function],
                    }
                  }
                  forwardedRef={null}
                  icon={
                    <ForwardRef(AppSwitcher24)
                      className="bx--header__menu-item bx--header__menu-title"
                      description="Icon"
                      fill="white"
                    />
                  }
                  label="Boards"
                  onClick={[MockFunction]}
                  tabIndex={0}
                >
                  <SideNavLink
                    aria-label="Boards"
                    className="SideNav__StyledSideNavLink-yn3bk8-1 hllekx disabled"
                    element="a"
                    icon={
                      <ForwardRef(AppSwitcher24)
                        className="bx--header__menu-item bx--header__menu-title"
                        description="Icon"
                        fill="white"
                      />
                    }
                    label="Boards"
                    onClick={[MockFunction]}
                    tabIndex={0}
                  >
                    <SideNavItem>
                      <li
                        className="bx--side-nav__item"
                      >
                        <Link
                          aria-label="Boards"
                          className="bx--side-nav__link SideNav__StyledSideNavLink-yn3bk8-1 hllekx disabled"
                          element="a"
                          label="Boards"
                          onClick={[MockFunction]}
                          tabIndex={0}
                        >
                          <a
                            aria-label="Boards"
                            className="bx--side-nav__link SideNav__StyledSideNavLink-yn3bk8-1 hllekx disabled"
                            label="Boards"
                            onClick={[MockFunction]}
                            tabIndex={0}
                          >
                            <SideNavIcon
                              small={true}
                            >
                              <div
                                className="bx--side-nav__icon bx--side-nav__icon--small"
                              >
                                <ForwardRef(AppSwitcher24)
                                  className="bx--header__menu-item bx--header__menu-title"
                                  description="Icon"
                                  fill="white"
                                >
                                  <Icon
                                    className="bx--header__menu-item bx--header__menu-title"
                                    description="Icon"
                                    fill="white"
                                    height={24}
                                    preserveAspectRatio="xMidYMid meet"
                                    viewBox="0 0 24 24"
                                    width={24}
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <svg
                                      aria-hidden={true}
                                      className="bx--header__menu-item bx--header__menu-title"
                                      description="Icon"
                                      fill="white"
                                      focusable="false"
                                      height={24}
                                      preserveAspectRatio="xMidYMid meet"
                                      style={
                                        Object {
                                          "willChange": "transform",
                                        }
                                      }
                                      viewBox="0 0 24 24"
                                      width={24}
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M18 18h3v3h-3zm-7.5 0h3v3h-3zM3 18h3v3H3zm15-7.5h3v3h-3zm-7.5 0h3v3h-3zm-7.5 0h3v3H3zM18 3h3v3h-3zm-7.5 0h3v3h-3zM3 3h3v3H3z"
                                      />
                                    </svg>
                                  </Icon>
                                </ForwardRef(AppSwitcher24)>
                              </div>
                            </SideNavIcon>
                            <SideNavLinkText>
                              <span
                                className="bx--side-nav__link-text"
                              >
                                Boards
                              </span>
                            </SideNavLinkText>
                          </a>
                        </Link>
                      </li>
                    </SideNavItem>
                  </SideNavLink>
                </StyledComponent>
              </SideNav__StyledSideNavLink>
            </ul>
          </SideNavItems>
          <SideNavFooter
            assistiveText="Open"
            isExpanded={false}
            onToggle={[Function]}
          >
            <footer
              className="bx--side-nav__footer"
            >
              <button
                className="bx--side-nav__toggle"
                onClick={[Function]}
                title="Open"
                type="button"
              >
                <div
                  className="bx--side-nav__icon"
                >
                  <ChevronRight20
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M22 16L12 26l-1.4-1.4 8.6-8.6-8.6-8.6L12 6z"
                      />
                    </svg>
                  </ChevronRight20>
                </div>
                <span
                  className="bx--assistive-text"
                >
                  Open
                </span>
              </button>
            </footer>
          </SideNavFooter>
        </nav>
      </SideNav>
    </StyledComponent>
  </SideNav__StyledSideNav>
</SideNav>
`;

exports[`SideNav testcases should render two levels of navigation links 1`] = `
<SideNav
  aria-label="Side navigation"
  defaultExpanded={false}
  i18n={
    Object {
      "closeText": "Close",
      "openText": "Open",
    }
  }
  links={
    Array [
      Object {
        "icon": <ForwardRef(AppSwitcher24)
          className="bx--header__menu-item bx--header__menu-title"
          description="Icon"
          fill="white"
        />,
        "isEnabled": true,
        "linkContent": "Boards",
        "metaData": Object {
          "element": "a",
          "label": "Boards",
          "onClick": [MockFunction],
          "tabIndex": 0,
        },
      },
      Object {
        "current": true,
        "icon": <ForwardRef(Chip24)
          className="bx--header__menu-item bx--header__menu-title"
          description="Icon"
          fill="white"
        />,
        "isEnabled": true,
        "linkContent": "Devices",
        "metaData": Object {
          "element": "a",
          "href": "https://google.com",
          "label": "Devices",
          "target": "_blank",
        },
      },
      Object {
        "childContent": Array [
          Object {
            "content": "Yet another link",
            "metaData": Object {
              "element": "button",
              "label": "Devices",
              "onClick": [MockFunction],
            },
          },
        ],
        "icon": <ForwardRef(Group24)
          className="bx--header__menu-item bx--header__menu-title"
          description="Icon"
          fill="white"
        />,
        "isEnabled": true,
        "linkContent": "Members",
        "metaData": Object {
          "element": "button",
          "label": "Members",
        },
      },
    ]
  }
>
  <SideNav__StyledSideNav
    aria-label="Side navigation"
    defaultExpanded={false}
    translateById={[Function]}
  >
    <StyledComponent
      aria-label="Side navigation"
      defaultExpanded={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "__docgenInfo": Object {
            "description": "",
            "displayName": "SideNav",
            "methods": Array [
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleExpand",
                "params": Array [],
                "returns": null,
              },
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleFocus",
                "params": Array [],
                "returns": null,
              },
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleBlur",
                "params": Array [],
                "returns": null,
              },
            ],
            "props": Object {
              "aria-label": Object {
                "description": "Required props for accessibility label on the underlying menu",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "aria-labelledby": Object {
                "description": "",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "className": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "null",
                },
                "description": "Optionally provide a custom class to apply to the underlying <li> node",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "defaultExpanded": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "false",
                },
                "description": "Specify whether the side navigation is expanded or collapsed",
                "required": false,
                "type": Object {
                  "name": "bool",
                },
              },
              "translateById": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "function translateById(id) {
  return translations[id];
}",
                },
                "description": "Provide a custom function for translating all message ids within this
component. This function will take in two arguments: the mesasge Id and the
state of the component. From this, you should return a string representing
the label you want displayed or read by screen readers.",
                "required": false,
                "type": Object {
                  "name": "func",
                },
              },
            },
          },
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "SideNav__StyledSideNav-yn3bk8-0",
            "isStatic": false,
            "lastClassName": "jQkcEV",
            "rules": Array [
              "&&&{background-color:",
              "#152935",
              ";border-top:1px solid #3c4646;height:calc(100% - 3rem);.bx--side-nav__menu[role='menu'] .bx--side-nav__link[role='menuitem']{height:2rem;min-height:2rem;padding-left:3.5rem;}.bx--side-nav__link{position:relative;display:flex;align-items:center;text-decoration:none;min-height:3rem;padding-right:1rem;font-weight:400;}button{appearance:none;width:100%;background:",
              "#152935",
              ";}button.bx--side-nav__link{border:none;}.bx--side-nav__link > .bx--side-nav__link-text{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;color:#f3f3f3;font-size:0.875rem;letter-spacing:0.1px;line-height:1.25rem;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}.bx--side-nav__link:focus{outline:4px solid #0062ff;outline-offset:-4px;}}",
            ],
          },
          "displayName": "SideNav__StyledSideNav",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "SideNav__StyledSideNav-yn3bk8-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
      translateById={[Function]}
    >
      <SideNav
        aria-label="Side navigation"
        className="SideNav__StyledSideNav-yn3bk8-0 jQkcEV"
        defaultExpanded={false}
        translateById={[Function]}
      >
        <nav
          aria-label="Side navigation"
          className="bx--side-nav__navigation bx--side-nav SideNav__StyledSideNav-yn3bk8-0 jQkcEV"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <SideNavItems>
            <ul
              className="bx--side-nav__items"
            >
              <SideNav__StyledSideNavLink
                aria-label="Boards"
                className="disabled"
                element="a"
                icon={
                  <ForwardRef(AppSwitcher24)
                    className="bx--header__menu-item bx--header__menu-title"
                    description="Icon"
                    fill="white"
                  />
                }
                key="menu-link-Boards-global"
                label="Boards"
                onClick={[MockFunction]}
                tabIndex={0}
              >
                <StyledComponent
                  aria-label="Boards"
                  className="disabled"
                  element="a"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                        "isStatic": false,
                        "lastClassName": "hllekx",
                        "rules": Array [
                          "&&&{position:relative;display:flex;align-items:center;text-decoration:none;min-height:3rem;padding-right:1rem;font-weight:400;:focus{outline:4px solid #0062ff;outline-offset:-4px;}:hover{background-color:",
                          "#2d3f48",
                          ";}> .bx--side-nav__link-text{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;color:#f3f3f3;font-size:0.875rem;letter-spacing:0.1px;line-height:1.25rem;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}> .bx--side-nav__icon{margin-right:0.5rem;}}",
                        ],
                      },
                      "displayName": "SideNav__StyledSideNavLink",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                      Symbol(Symbol.hasInstance): [Function],
                    }
                  }
                  forwardedRef={null}
                  icon={
                    <ForwardRef(AppSwitcher24)
                      className="bx--header__menu-item bx--header__menu-title"
                      description="Icon"
                      fill="white"
                    />
                  }
                  label="Boards"
                  onClick={[MockFunction]}
                  tabIndex={0}
                >
                  <SideNavLink
                    aria-label="Boards"
                    className="SideNav__StyledSideNavLink-yn3bk8-1 hllekx disabled"
                    element="a"
                    icon={
                      <ForwardRef(AppSwitcher24)
                        className="bx--header__menu-item bx--header__menu-title"
                        description="Icon"
                        fill="white"
                      />
                    }
                    label="Boards"
                    onClick={[MockFunction]}
                    tabIndex={0}
                  >
                    <SideNavItem>
                      <li
                        className="bx--side-nav__item"
                      >
                        <Link
                          aria-label="Boards"
                          className="bx--side-nav__link SideNav__StyledSideNavLink-yn3bk8-1 hllekx disabled"
                          element="a"
                          label="Boards"
                          onClick={[MockFunction]}
                          tabIndex={0}
                        >
                          <a
                            aria-label="Boards"
                            className="bx--side-nav__link SideNav__StyledSideNavLink-yn3bk8-1 hllekx disabled"
                            label="Boards"
                            onClick={[MockFunction]}
                            tabIndex={0}
                          >
                            <SideNavIcon
                              small={true}
                            >
                              <div
                                className="bx--side-nav__icon bx--side-nav__icon--small"
                              >
                                <ForwardRef(AppSwitcher24)
                                  className="bx--header__menu-item bx--header__menu-title"
                                  description="Icon"
                                  fill="white"
                                >
                                  <Icon
                                    className="bx--header__menu-item bx--header__menu-title"
                                    description="Icon"
                                    fill="white"
                                    height={24}
                                    preserveAspectRatio="xMidYMid meet"
                                    viewBox="0 0 24 24"
                                    width={24}
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <svg
                                      aria-hidden={true}
                                      className="bx--header__menu-item bx--header__menu-title"
                                      description="Icon"
                                      fill="white"
                                      focusable="false"
                                      height={24}
                                      preserveAspectRatio="xMidYMid meet"
                                      style={
                                        Object {
                                          "willChange": "transform",
                                        }
                                      }
                                      viewBox="0 0 24 24"
                                      width={24}
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M18 18h3v3h-3zm-7.5 0h3v3h-3zM3 18h3v3H3zm15-7.5h3v3h-3zm-7.5 0h3v3h-3zm-7.5 0h3v3H3zM18 3h3v3h-3zm-7.5 0h3v3h-3zM3 3h3v3H3z"
                                      />
                                    </svg>
                                  </Icon>
                                </ForwardRef(AppSwitcher24)>
                              </div>
                            </SideNavIcon>
                            <SideNavLinkText>
                              <span
                                className="bx--side-nav__link-text"
                              >
                                Boards
                              </span>
                            </SideNavLinkText>
                          </a>
                        </Link>
                      </li>
                    </SideNavItem>
                  </SideNavLink>
                </StyledComponent>
              </SideNav__StyledSideNavLink>
              <SideNav__StyledSideNavLink
                aria-label="Devices"
                className="disabled"
                element="a"
                href="https://google.com"
                icon={
                  <ForwardRef(Chip24)
                    className="bx--header__menu-item bx--header__menu-title"
                    description="Icon"
                    fill="white"
                  />
                }
                isActive={true}
                key="menu-link-Devices-global"
                label="Devices"
                target="_blank"
              >
                <StyledComponent
                  aria-label="Devices"
                  className="disabled"
                  element="a"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                        "isStatic": false,
                        "lastClassName": "hllekx",
                        "rules": Array [
                          "&&&{position:relative;display:flex;align-items:center;text-decoration:none;min-height:3rem;padding-right:1rem;font-weight:400;:focus{outline:4px solid #0062ff;outline-offset:-4px;}:hover{background-color:",
                          "#2d3f48",
                          ";}> .bx--side-nav__link-text{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;color:#f3f3f3;font-size:0.875rem;letter-spacing:0.1px;line-height:1.25rem;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}> .bx--side-nav__icon{margin-right:0.5rem;}}",
                        ],
                      },
                      "displayName": "SideNav__StyledSideNavLink",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                      Symbol(Symbol.hasInstance): [Function],
                    }
                  }
                  forwardedRef={null}
                  href="https://google.com"
                  icon={
                    <ForwardRef(Chip24)
                      className="bx--header__menu-item bx--header__menu-title"
                      description="Icon"
                      fill="white"
                    />
                  }
                  isActive={true}
                  label="Devices"
                  target="_blank"
                >
                  <SideNavLink
                    aria-label="Devices"
                    className="SideNav__StyledSideNavLink-yn3bk8-1 hllekx disabled"
                    element="a"
                    href="https://google.com"
                    icon={
                      <ForwardRef(Chip24)
                        className="bx--header__menu-item bx--header__menu-title"
                        description="Icon"
                        fill="white"
                      />
                    }
                    isActive={true}
                    label="Devices"
                    target="_blank"
                  >
                    <SideNavItem>
                      <li
                        className="bx--side-nav__item"
                      >
                        <Link
                          aria-label="Devices"
                          className="bx--side-nav__link bx--side-nav__link--current SideNav__StyledSideNavLink-yn3bk8-1 hllekx disabled"
                          element="a"
                          href="https://google.com"
                          label="Devices"
                          target="_blank"
                        >
                          <a
                            aria-label="Devices"
                            className="bx--side-nav__link bx--side-nav__link--current SideNav__StyledSideNavLink-yn3bk8-1 hllekx disabled"
                            href="https://google.com"
                            label="Devices"
                            target="_blank"
                          >
                            <SideNavIcon
                              small={true}
                            >
                              <div
                                className="bx--side-nav__icon bx--side-nav__icon--small"
                              >
                                <ForwardRef(Chip24)
                                  className="bx--header__menu-item bx--header__menu-title"
                                  description="Icon"
                                  fill="white"
                                >
                                  <Icon
                                    className="bx--header__menu-item bx--header__menu-title"
                                    description="Icon"
                                    fill="white"
                                    height={24}
                                    preserveAspectRatio="xMidYMid meet"
                                    viewBox="0 0 32 32"
                                    width={24}
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <svg
                                      aria-hidden={true}
                                      className="bx--header__menu-item bx--header__menu-title"
                                      description="Icon"
                                      fill="white"
                                      focusable="false"
                                      height={24}
                                      preserveAspectRatio="xMidYMid meet"
                                      style={
                                        Object {
                                          "willChange": "transform",
                                        }
                                      }
                                      viewBox="0 0 32 32"
                                      width={24}
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M11 11v10h10V11zm8 8h-6v-6h6z"
                                      />
                                      <path
                                        d="M30 13v-2h-4V8a2 2 0 0 0-2-2h-3V2h-2v4h-6V2h-2v4H8a2 2 0 0 0-2 2v3H2v2h4v6H2v2h4v3a2 2 0 0 0 2 2h3v4h2v-4h6v4h2v-4h3a2 2 0 0 0 2-2v-3h4v-2h-4v-6zm-6 11H8V8h16z"
                                      />
                                    </svg>
                                  </Icon>
                                </ForwardRef(Chip24)>
                              </div>
                            </SideNavIcon>
                            <SideNavLinkText>
                              <span
                                className="bx--side-nav__link-text"
                              >
                                Devices
                              </span>
                            </SideNavLinkText>
                          </a>
                        </Link>
                      </li>
                    </SideNavItem>
                  </SideNavLink>
                </StyledComponent>
              </SideNav__StyledSideNavLink>
              <SideNav__StyledSideNavMenu
                aria-label="dropdown"
                className="disabled"
                icon={
                  <ForwardRef(Group24)
                    className="bx--header__menu-item bx--header__menu-title"
                    description="Icon"
                    fill="white"
                  />
                }
                key="menu-link-2-dropdown"
                title="Members"
              >
                <StyledComponent
                  aria-label="dropdown"
                  className="disabled"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SideNav__StyledSideNavMenu-yn3bk8-2",
                        "isStatic": false,
                        "lastClassName": "cVDWRM",
                        "rules": Array [
                          "&&&{background-color:",
                          "#152935",
                          ";:not(.bx--side-nav__item--active):hover{background-color:",
                          "#152935",
                          ";}> button:hover{background-color:",
                          "#2d3f48",
                          ";}.bx--side-nav__menu[role='menu'] .bx--side-nav__link[role='menuitem']:not(.bx--side-nav__link--current):not([aria-current='page']):hover{background-color:",
                          "#2d3f48",
                          ";}:hover{background-color:",
                          "#2d3f48",
                          ";}}",
                        ],
                      },
                      "displayName": "SideNav__StyledSideNavMenu",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SideNav__StyledSideNavMenu-yn3bk8-2",
                      "target": Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "render": [Function],
                      },
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  icon={
                    <ForwardRef(Group24)
                      className="bx--header__menu-item bx--header__menu-title"
                      description="Icon"
                      fill="white"
                    />
                  }
                  title="Members"
                >
                  <ForwardRef
                    aria-label="dropdown"
                    className="SideNav__StyledSideNavMenu-yn3bk8-2 cVDWRM disabled"
                    icon={
                      <ForwardRef(Group24)
                        className="bx--header__menu-item bx--header__menu-title"
                        description="Icon"
                        fill="white"
                      />
                    }
                    title="Members"
                  >
                    <SideNavMenu
                      aria-label="dropdown"
                      buttonRef={null}
                      className="SideNav__StyledSideNavMenu-yn3bk8-2 cVDWRM disabled"
                      defaultExpanded={false}
                      icon={
                        <ForwardRef(Group24)
                          className="bx--header__menu-item bx--header__menu-title"
                          description="Icon"
                          fill="white"
                        />
                      }
                      isActive={false}
                      title="Members"
                    >
                      <li
                        className="bx--side-nav__item SideNav__StyledSideNavMenu-yn3bk8-2 cVDWRM disabled"
                      >
                        <button
                          aria-expanded={false}
                          aria-haspopup="true"
                          className="bx--side-nav__submenu"
                          onClick={[Function]}
                          type="button"
                        >
                          <SideNavIcon
                            small={false}
                          >
                            <div
                              className="bx--side-nav__icon"
                            >
                              <ForwardRef(Group24)
                                className="bx--header__menu-item bx--header__menu-title"
                                description="Icon"
                                fill="white"
                              >
                                <Icon
                                  className="bx--header__menu-item bx--header__menu-title"
                                  description="Icon"
                                  fill="white"
                                  height={24}
                                  preserveAspectRatio="xMidYMid meet"
                                  viewBox="0 0 32 32"
                                  width={24}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="bx--header__menu-item bx--header__menu-title"
                                    description="Icon"
                                    fill="white"
                                    focusable="false"
                                    height={24}
                                    preserveAspectRatio="xMidYMid meet"
                                    style={
                                      Object {
                                        "willChange": "transform",
                                      }
                                    }
                                    viewBox="0 0 32 32"
                                    width={24}
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M31 30h-2v-3a3 3 0 0 0-3-3h-4a3 3 0 0 0-3 3v3h-2v-3a5 5 0 0 1 5-5h4a5 5 0 0 1 5 5zm-7-18a3 3 0 1 1-3 3 3 3 0 0 1 3-3m0-2a5 5 0 1 0 5 5 5 5 0 0 0-5-5zm-9 12h-2v-3a3 3 0 0 0-3-3H6a3 3 0 0 0-3 3v3H1v-3a5 5 0 0 1 5-5h4a5 5 0 0 1 5 5zM8 4a3 3 0 1 1-3 3 3 3 0 0 1 3-3m0-2a5 5 0 1 0 5 5 5 5 0 0 0-5-5z"
                                    />
                                  </svg>
                                </Icon>
                              </ForwardRef(Group24)>
                            </div>
                          </SideNavIcon>
                          <span
                            className="bx--side-nav__submenu-title"
                          >
                            Members
                          </span>
                          <SideNavIcon
                            className="bx--side-nav__submenu-chevron"
                            small={true}
                          >
                            <div
                              className="bx--side-nav__icon bx--side-nav__icon--small bx--side-nav__submenu-chevron"
                            >
                              <ChevronDown20
                                height={20}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 32 32"
                                width={20}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <svg
                                  aria-hidden={true}
                                  focusable="false"
                                  height={20}
                                  preserveAspectRatio="xMidYMid meet"
                                  style={
                                    Object {
                                      "willChange": "transform",
                                    }
                                  }
                                  viewBox="0 0 32 32"
                                  width={20}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M16 22L6 12l1.4-1.4 8.6 8.6 8.6-8.6L26 12z"
                                  />
                                </svg>
                              </ChevronDown20>
                            </div>
                          </SideNavIcon>
                        </button>
                        <ul
                          className="bx--side-nav__menu"
                          role="menu"
                        >
                          <ForwardRef
                            element="button"
                            key="menu-link-0-child"
                            label="Devices"
                            onClick={[MockFunction]}
                          >
                            <li
                              className="bx--side-nav__menu-item"
                              role="none"
                            >
                              <Link
                                className="bx--side-nav__link"
                                element="button"
                                label="Devices"
                                onClick={[MockFunction]}
                                role="menuitem"
                              >
                                <button
                                  className="bx--side-nav__link"
                                  label="Devices"
                                  onClick={[MockFunction]}
                                  role="menuitem"
                                >
                                  <SideNavLinkText>
                                    <span
                                      className="bx--side-nav__link-text"
                                    >
                                      Yet another link
                                    </span>
                                  </SideNavLinkText>
                                </button>
                              </Link>
                            </li>
                          </ForwardRef>
                        </ul>
                      </li>
                    </SideNavMenu>
                  </ForwardRef>
                </StyledComponent>
              </SideNav__StyledSideNavMenu>
            </ul>
          </SideNavItems>
          <SideNavFooter
            assistiveText="Open"
            isExpanded={false}
            onToggle={[Function]}
          >
            <footer
              className="bx--side-nav__footer"
            >
              <button
                className="bx--side-nav__toggle"
                onClick={[Function]}
                title="Open"
                type="button"
              >
                <div
                  className="bx--side-nav__icon"
                >
                  <ChevronRight20
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M22 16L12 26l-1.4-1.4 8.6-8.6-8.6-8.6L12 6z"
                      />
                    </svg>
                  </ChevronRight20>
                </div>
                <span
                  className="bx--assistive-text"
                >
                  Open
                </span>
              </button>
            </footer>
          </SideNavFooter>
        </nav>
      </SideNav>
    </StyledComponent>
  </SideNav__StyledSideNav>
</SideNav>
`;
